--- a/sites/all/themes/news_center/css/styles.css
+++ b/sites/all/themes/news_center/css/styles.css
@@ -123,7 +123,7 @@
     border-bottom: none !important;
 }
 
-h2.block-title, .footer h2.block-title {
+h2.block-title {
     border-bottom: 1px solid #CCCCCC;
     font-size: 1.5em;
     margin-bottom: 10px;
