--- a/sites/all/themes/news_center/css/reset.css
+++ b/sites/all/themes/news_center/css/reset.css
@@ -23,6 +23,32 @@ a {
     text-decoration: underline;
 }
 
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+    text-decoration: none;
+}
+
+a.back-to-top {
+    background: url(/sites/all/themes/news_center/images/up.png) no-repeat scroll 5px 6px #DDDDDD;
+    display: block;
+    font-size: 11px;
+    padding: 10px 0;
+    text-align: center;
+    text-decoration: none;
+    width: 100%;
+    margin-top: 10px;
+}
+
+hr {
+    background: #ddd;
+    color: #ddd;
+    clear: both;
+    float: none;
+    width: 100%;
+    height: 1px;
+    margin: 0 0 1.45em;
+    border: none;
+}
+
 .clearfix:after, .container:after {
     content: "\0020";
     display: block;
