--- a/sites/all/themes/news_center/css/styles.css
+++ b/sites/all/themes/news_center/css/styles.css
@@ -90,10 +90,8 @@
 }
 
 .block-views .views-field-body-1 {
-    border-bottom: 1px dashed #CCCCCC;
     margin-bottom: 9px;
     margin-top: 8px;
-    padding-bottom: 17px;
 }
 
 .block-views .view-footer {
@@ -130,4 +128,10 @@ h2.block-title {
 blockquote.image-field-caption p {
     line-height: 1.5em;
     margin: 0 0 0.6em;
+}
+
+/* hide title on Home Page */
+.front #page-title {
+    display: none;
+    visibility: hidden;
 }
