--- a/sites/all/themes/news_center/css/styles.css
+++ b/sites/all/themes/news_center/css/styles.css
@@ -75,13 +75,11 @@ h2.block-title {
 
 .block-views .views-field-field-image {
     border: 1px solid #CCCCCC;
-    margin-bottom: 6px;
     margin-right: 10px;
     padding: 3px;
-    -moz-transition: background-color 0.5s ease-out;
-    -o-transition: background-color 0.5s ease-out;
-    -webkit-transition: background-color 0.5s ease-out;
-    transition: background-color 0.5s ease-out;
+    float: left;
+    position: relative;
+    top: -11px;
 }
 
 
