news_center theme

--- a/sites/all/themes/news_center/css/styles.css
+++ b/sites/all/themes/news_center/css/styles.css
@@ -64,7 +64,7 @@ h2.block-title {
     padding-bottom: 5px;
 }
 
-.region-content0 .block-views .views-field-field-image {
+.region-content0 .block-views .views-field-field-image img {
     border: 1px solid #CCCCCC;
     margin-right: 10px;
     padding: 3px;
