--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -10,6 +10,15 @@
 
 /* wider screens */
 @media only screen and (max-width: 420px) {
+
+    /* slidehow */
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay,
+    .views_slideshow_cycle_main,
+    #widget_pager_bottom_home_page-block,
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item {
+        width: 380px;
+    }
+
     /* Main Menu Styles */
 
     #block-superfish-1 {
