--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -18,7 +18,7 @@
     #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item,
 
 
-    .views-field.views-field-field-image img{
+    .views_slideshow_cycle_main .views-field.views-field-field-image img{
         width: 320px;
     }
 
