--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -11,13 +11,12 @@
 /* wider screens */
 @media only screen and (max-width: 420px) {
 
-    /* slidehow */
+    /* slideshow */
     #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay,
     .views_slideshow_cycle_main,
     #widget_pager_bottom_home_page-block,
     #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item,
-
-
+    .view-id-home_page .views-slideshow-controls-bottom,
     .views_slideshow_cycle_main .views-field.views-field-field-image img{
         width: 320px;
     }
