news_center theme

--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -71,6 +71,22 @@
         display: block;
     }
 
+    /* slideshow */
+    #views_slideshow_cycle_main_home_page-block,
+    #block-views-home-page-block .skin-default,
+    #block-views-home-page-block .views_slideshow_cycle_main,
+    #block-views-home-page-block #widget_pager_bottom_home_page-block,
+    #block-views-home-page-block .views-slideshow-controls-bottom,
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-title
+    #block-views-home-page-block .views_slideshow_cycle_main .views-field.views-field-field-image img {
+        width: 580px;
+    }
+
+    .views_slideshow_cycle_main {
+        height: 500px;
+    }
+
+
 }
 
 
@@ -82,6 +98,7 @@
     #block-views-home-page-block .views_slideshow_cycle_main,
     #block-views-home-page-block #widget_pager_bottom_home_page-block,
     #block-views-home-page-block .views-slideshow-controls-bottom,
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-title
     #block-views-home-page-block .views_slideshow_cycle_main .views-field.views-field-field-image img {
         width: 400px;
     }
@@ -101,6 +118,7 @@
     #block-views-home-page-block .views_slideshow_cycle_main,
     #block-views-home-page-block #widget_pager_bottom_home_page-block,
     #block-views-home-page-block .views-slideshow-controls-bottom,
+    #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-title
     #block-views-home-page-block .views_slideshow_cycle_main .views-field.views-field-field-image img {
         width: 320px;
     }
