--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -193,8 +193,9 @@
         margin-left: 3%;
     }
 
-    /* ad formatting in region-content2 */
-    #ad_groups_33 {
+    /* ad formatting in region-content2 / sidebar */
+    #ad_groups_33,
+    .region-sidebar-second .block-simpleads > div > div > div >div  {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -203,6 +204,11 @@
     #ad_groups_33 .simplead-container {
         width: 31%;
     }
+
+    .region-sidebar-second .simplead-container {
+        width: 49%;
+    }
+
 
 }
 
