--- a/sites/all/themes/news_center/css/reset.css
+++ b/sites/all/themes/news_center/css/reset.css
@@ -53,6 +53,11 @@ hr {
     border: none;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 .clearfix:after, .container:after {
     content: "\0020";
     display: block;
