--- a/sites/all/themes/news_center/css/styles.css
+++ b/sites/all/themes/news_center/css/styles.css
@@ -275,8 +275,9 @@ blockquote.image-field-caption p {
     padding: 0.2em 0.5em 0 0;
 }
 
-#footer ul li ul.menu {
+#footer ul li ul.menu, ul li.collapsed, ul li.expanded {
     padding: 0.2em 0.5em 0 0;
+    list-style: none;
 }
 
 #footer a {
