--- a/sites/all/themes/news_center/css/media.css
+++ b/sites/all/themes/news_center/css/media.css
@@ -128,55 +128,34 @@
         display: none;
     }
 
-    #block-superfish-1 ul li.first {
-        margin-left: 4px !important;
-    }
-
     #block-superfish-1 {
         margin-bottom: 0;
-        width: 1040px;
         display: block;
-        position: inherit;
         z-index: 99;
     }
 
     #block-superfish-1 ul li {
-        display: inline-block;
         float: none;
         font-weight: bold;
-        height: 27px;
-        margin-left: 4px !important;
-        margin-top: 2px;
-        padding: 0;
-        text-transform: uppercase;
-        width: auto;
+        margin: 0 15px;
     }
 
     #block-superfish-1 ul li a {
         color: #FFFFFF;
-        display: block;
         font-weight: bold;
-        height: 21px;
-        margin-top: 0;
-        padding: 5px 15px 0;
         text-decoration: none;
-        background: #000;
-        line-height: 15px;
+        line-height: 1.5em;
+        text-transform: uppercase;
     }
 
     #block-superfish-1 ul li a.active, #block-superfish-1 ul li a:hover, #block-menu-menu-news-categories ul li a:hover {
         background: none repeat 0 0 #FFFFFF;
-        height: 21px;
         color: #333333;
-        padding-top: 5px;
     }
 
     #block-superfish-1 a.active-trail .active li {
         background: none repeat 0 0 #000033;
         color: #333333;
-        padding-top: 0;
-        padding-left: 15px;
-
     }
 
     a.back-to-top {
